--- a/styles/style.css
+++ b/styles/style.css
@@ -1,11 +1,11 @@
 *,
 *::before,
 *::after {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html {
-    block-size: 100%;
+  block-size: 100%;
 }
 
 .page {
@@ -13,12 +13,11 @@ html {
     align-items: center;
     inline-size: 1200px;
     block-size: 100%;
-    margin: 0 auto;
+    margin: auto;
     color: #fff;
-    font-family: "Fira Sans Condensed", sans-serif;
+    font-family: 'Fira Sans Condensed', sans-serif;
     font-size: 18px;
     background-color: #1b1919;
-    overflow: hidden;
 }
 
 h1,
@@ -31,94 +30,94 @@ ol,
 li,
 blockquote,
 fieldset {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 ul,
 ol {
-    list-style: none;
+  list-style: none;
 }
 
 .visually-hidden {
-    position: absolute;
-    inline-size: 1px;
-    block-size: 1px;
-    overflow: hidden;
-    clip: rect(0 0 0 0);
-    clip-path: inset(50%);
-    white-space: nowrap;
+  position: absolute;
+  inline-size: 1px;
+  block-size: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
 }
 
 .content {
-    display: flex;
-    align-items: center;
-    min-inline-size: 1140px;
-    gap: 30px;
-    padding: 133px 30px;
+  display: flex;
+  inline-size: 100%;
+  gap: 30px;
+  margin: 0 30px;
 }
 
 .result {
-    align-items: flex-start;
+    align-items: flex-end;
     margin-block-end: 4px;
-    margin-inline-start: 30px;
     margin-block-start: 78px;
 }
 
 .result__video-container {
-    position: relative;
-    inline-size: 711px;
-    block-size: 386px;
+  position: relative;
+  inline-size: 711px;
+  block-size: 386px;
 }
 
-.result__video {
-    block-size: 100%;
-    inline-size: 100%;
-    object-fit: cover;
+.result__video{
+  block-size: 100%;
+  inline-size: 100%;
+  object-fit: cover;
+  object-position: center;
 }
 
 .title {
-    font-family: "Oswald", sans-serif;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 75px;
-    line-height: 94%;
-    text-transform: uppercase;
-    color: #ffffff;
+  font-family: 'Oswald', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 75px;
+  line-height: 94%;
+  text-transform: uppercase;
+  color: #FFFFFF;
 }
 
 .content__accent {
-    font-family: "Oswald", sans-serif;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 75px;
-    line-height: 94%;
-    text-transform: uppercase;
-    color: #545050;
-    text-align: center;
+  font-family: 'Oswald', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 75px;
+  line-height: 94%;
+  text-transform: uppercase;
+  color: #545050;
+  text-align: center;
 }
 
 .content__card-link {
-    text-decoration: none;
-    color: #ffffff;
-    display: block;
-    cursor: pointer;
-    margin: 2px;
+  text-decoration: none;
+  color: #FFFFFF;
+  display: block;
+  cursor: pointer;
+  margin: 2px;
 }
 
 .content__card-link:focus {
-    border: none;
+    outline: none;
 }
 
 .content__card-link:focus-visible {
-    outline: 1px solid #ffffff;
+    outline: 1px solid #FFFFFF;
 }
 
 .content__card-link:hover {
     text-decoration: underline;
 }
 .content__card-link:active {
-    background-color: rgba(84, 80, 80, 1);
+  background-color: rgba(84, 80, 80, 1);
+
 }
 
 .content__card-link_current {
@@ -126,48 +125,47 @@ ol {
 }
 
 .content__video-card-title {
-    margin-block-end: 6px;
-    font-family: "Oswald", sans-serif;
+    padding: 2px 2px 5px;
+    font-family: 'Oswald', sans-serif;
     font-style: normal;
     font-weight: 700;
+    hyphens: auto;
     font-size: 30px;
     line-height: 100%;
     text-transform: uppercase;
-    color: #ffffff;
+    color: #FFFFFF;
 }
 
 .content__video-card-description {
-    font-style: normal;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 16px;
-    color: #ffffff;
-    order: 1;
+  font-weight: 400;
+  padding: 0 2px;
+  line-height: 16.2px;
+  color: #FFFFFF;
 }
 
 .search-form {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 40px;
-    padding-block-start: 14px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 40px;
+  padding-block-start: 14px;
 }
 
 .search-form__fieldset-title {
-    font-style: normal;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 22px;
-    color: #ffffff;
-    margin-block-end: 3px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  color: #FFFFFF;
+  margin-block-end: 3px;
 }
 
 .content__list {
-    block-size: 298px;
-    overflow-y: scroll;
-    margin-block-start: 22px;
-    overflow: auto;
-    position: relative;
+  block-size: 298px;
+  margin-block-start: 22px;
+  overflow-y: scroll;
+  scrollbar-width: none;
+  position: relative;
 }
 
 .content__details {
@@ -178,40 +176,37 @@ ol {
     margin-inline-end: 30px;
 }
 
+
 .content__list-item:not(:last-child) {
     padding-block-end: 30px;
 }
 
 .content__video-card {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .content__video-card-thumbnail {
     object-fit: cover;
-    inline-size: 194px;
-    block-size: 103px;
-    object-position: right;
-}
-
-.content__video-card-description-container {
-    flex: 1;
+    inline-size: 194px; 
+    block-size: 103px; 
+    object-position: center;
 }
 
 fieldset {
-    border: 0;
+  border: 0;
 }
 
 .search-form__fieldset {
-    font-family: "Fira Sans Condensed", sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 22px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    inline-size: 100%;
+  font-family: 'Fira Sans Condensed', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  inline-size: 100%;
 }
 
 .search-form__checkbox-list {
@@ -221,72 +216,66 @@ fieldset {
     gap: 20px;
 }
 
-.search-form__label {
-    display: flex;
-    align-items: center;
-    gap: 5px;
-    width: fit-content;
-    text-decoration: underline transparent;
-    cursor: pointer;
-    appearance: none;
-    margin-block-end: 2px;
-}
-
 .search-form__textfield {
     padding: 2px 0;
+    border-top: 1px solid #FFFFFF;
+    border-bottom: 1px solid #FFFFFF;
     appearance: none;
     border-right: none;
     border-left: none;
-    inline-size: 225px;
     background-color: transparent;
-    font-family: "Fira Sans Condensed", sans-serif;
+    font-family: inherit;
+    font-weight: inherit;
+    font-size: inherit;
     font-style: normal;
     font-weight: 400;
-    font-size: 18px;
+    inline-size: 225px;
     color: rgba(255, 255, 255, 1);
 }
+
+.search-form__textfield::placeholder {
+    font-family: inherit;
+    font-weight: inherit;
+    font-size: inherit;
+    color: rgba(255, 255, 255, 0.7);
+  }
 
 .search-form__textfield:focus {
     outline: none;
 }
 
-.search-form__textfield:focus-visible {
-    outline: 1px solid #ffffff;
-}
+.search-form__textfield:focus-visible { 
+    outline: 1px solid #ffffff; 
+} 
+
 .search-form__textfield:active {
-    border: 1px solid #ffffff;
+    border: 1px solid #FFFFFF;
 }
 
 .search-form__label {
     display: flex;
     gap: 5px;
-    width: fit-content;
     cursor: pointer;
     appearance: none;
+    text-decoration: underline transparent;
+
 }
 
 .search-form__label:hover .search-form__label-text {
     text-decoration: underline;
 }
 
-input[type="checkbox"]:focus + .search-form__pseudo-checkbox {
-    outline: none;
-}
-
-input[type="checkbox"]:focus-visible + .search-form__pseudo-checkbox {
-    outline: 1px solid #ffffff;
-}
 
 .search-form__pseudo-checkbox {
     display: flex;
     inline-size: 16px;
     block-size: 16px;
-    outline: 1px solid #ffffff;
+    outline: 1px solid #FFFFFF;
 }
 
-input[type="checkbox"]:checked + .search-form__pseudo-checkbox {
-    background-color: #ffffff;
-    outline: 1px solid #ffffff;
+input[type="checkbox"]:checked+.search-form__pseudo-checkbox {
+    background-color: #FFFFFF;
+    outline: 1px solid #FFFFFF;
     outline-offset: 1px;
 }
 
@@ -299,7 +288,7 @@ input[type="checkbox"]:checked + .search-form__pseudo-checkbox {
     align-items: center;
     justify-content: center;
     color: #fff;
-    border: 1px solid #ffffff;
+    border: 1px solid #FFFFFF;
     background-color: transparent;
     font-family: "Fira Sans Condensed", sans-serif;
     cursor: pointer;
@@ -314,42 +303,26 @@ input[type="checkbox"]:checked + .search-form__pseudo-checkbox {
     background-color: rgba(84, 80, 80, 1);
 }
 
-.button:focus-visible {
-    outline: 1px solid #ffffff;
-    outline-offset: 1px;
+.button:focus {
+    outline: none;
 }
+
+.button:focus-visible {
+    outline: 1px solid #FFFFFF;
+    outline-offset: 1px;
+  }
 
 .search-form__submit-button {
     align-self: flex-end;
     inline-size: 194px;
 }
 
-.content__card-link {
-    margin: 2px;
-}
-
 .more-button {
     width: 100%;
-    padding-block: 6px;
-    font-family: "Fira Sans Condensed", sans-serif;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 21.6px;
-    text-align: center;
-    color: #ffffff;
-    appearance: none;
 }
 
 .search-form__label:has(:focus-visible) {
-    outline: 1px solid #fff;
+    outline: 1px solid #FFF;
     outline-offset: 1px;
-}
+  }
 
-.search-form__submit-button:hover {
-    text-decoration: underline;
-}
-
-.search-form__submit-button:active {
-    background-color: rgba(84, 80, 80, 1);
-}
