--- a/styles/style.css
+++ b/styles/style.css
@@ -1,23 +1,23 @@
 *,
 *::before,
 *::after {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html {
-	block-size: 100%;
+  block-size: 100%;
 }
 
 .page {
-	display: flex;
-	align-items: center;
-	inline-size: 1200px;
-	min-block-size: 100%;
-	margin: 0 auto;
-	color: #fff;
-	font-family: 'Fira Sans Condensed', sans-serif;
-	font-size: 18px;
-	background-color: #1b1919;
+    display: flex;
+    align-items: center;
+    inline-size: 1200px;
+    min-block-size: 100%;
+    margin: 0 auto;
+    color: #fff;
+    font-family: 'Fira Sans Condensed', sans-serif;
+    font-size: 18px;
+    background-color: #1b1919;
 }
 
 h1,
@@ -30,303 +30,303 @@ ol,
 li,
 blockquote,
 fieldset {
-	margin: 0;
-	padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 ul,
 ol {
-	list-style: none;
+  list-style: none;
 }
 
 .visually-hidden {
-	position: absolute;
-	inline-size: 1px;
-	block-size: 1px;
-	overflow: hidden;
-	clip: rect(0 0 0 0);
-	clip-path: inset(50%);
-	white-space: nowrap;
+  position: absolute;
+  inline-size: 1px;
+  block-size: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
 }
 
 .content {
-	display: flex;
-	min-inline-size: 1140px;
-	gap: 30px;
-	padding-inline-start: 30px;
-	padding-inline-end: 30px;
-	padding-block-start: 133px;
-	padding-block-end: 133px;
+    display: flex;
+    min-inline-size: 1140px;
+    gap: 30px;
+    padding-inline-start: 30px;
+    padding-inline-end: 30px;
+    padding-block-start: 133px;
+    padding-block-end: 133px;
 }
 
 .result {
-	align-self: flex-end;
-	margin-block-start: 78px;
+    align-self: flex-end;
+    margin-block-start: 78px; 
 }
 
 .result__video-container {
-	position: relative;
-	inline-size: 711px;
-	block-size: 386px;
+  position: relative;
+  inline-size: 711px;
+  block-size: 386px;
 }
 
-.result__video {
-	block-size: 100%;
-	inline-size: 100%;
-	object-fit: cover;
-	object-position: center;
+.result__video{
+  block-size: 100%;
+  inline-size: 100%;
+  object-fit: cover;
+  object-position: center;
 }
 
 .title {
-	font-family: 'Oswald', sans-serif;
-	font-style: normal;
-	font-weight: 700;
-	padding: 0 0 26px;
-	font-size: 75px;
-	line-height: 70.5px;
-	text-transform: uppercase;
-	color: #FFFFFF;
+  font-family: 'Oswald', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  padding: 0 0 26px;
+  font-size: 75px;
+  line-height: 70.5px;
+  text-transform: uppercase;
+  color: #FFFFFF;
 }
 
 .content__accent {
-	font-family: 'Oswald', sans-serif;
-	font-style: normal;
-	font-weight: 700;
-	font-size: 75px;
-	line-height: 94%;
-	text-transform: uppercase;
-	color: #545050;
+  font-family: 'Oswald', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 75px;
+  line-height: 94%;
+  text-transform: uppercase;
+  color: #545050;
 }
 
 .content__list-item {
-	inline-size: 398px;
+    inline-size: 398px;
 }
 
 .content__card-link {
-	text-decoration: none;
-	color: #FFFFFF;
-	display: block;
-	cursor: pointer;
-	margin: 2px;
+  text-decoration: none;
+  color: #FFFFFF;
+  display: block;
+  cursor: pointer;
+  margin: 2px;
 }
 
 .content__card-link:focus {
-	outline: none;
+    outline: none;
 }
 
 .content__card-link:focus-visible {
-	outline: 1px solid #FFFFFF;
+    outline: 1px solid #FFFFFF;
 }
 
 .content__card-link:hover {
-	text-decoration: underline;
+    text-decoration: underline;
 }
-
 .content__card-link:active {
-	background-color: rgba(84, 80, 80, 1);
+  background-color: rgba(84, 80, 80, 1);
 
 }
 
 .content__card-link_current {
-	background-color: rgba(84, 80, 80, 1);
+    background-color: rgba(84, 80, 80, 1);
 }
 
 .content__video-card-title {
-	font-family: 'Oswald', sans-serif;
-	font-style: normal;
-	font-weight: 700;
-	hyphens: auto;
-	font-size: 30px;
-	line-height: 100%;
-	text-transform: uppercase;
-	color: #FFFFFF;
+    font-family: 'Oswald', sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    flex-grow: 1;
+    flex-basis: 0;
+    hyphens: auto;
+    font-size: 30px;
+    line-height: 100%;
+    text-transform: uppercase;
+    color: #FFFFFF;
 }
 
 .content__video-card-description {
-	font-weight: 400;
-	padding: 0 2px;
-	line-height: 16.2px;
-	color: #FFFFFF;
+  font-weight: 400;
+  line-height: 16.2px;
+  color: #FFFFFF;
 }
 
 .search-form {
-	display: flex;
-	justify-content: space-between;
-	gap: 40px;
-	padding-block-start: 15px;
+  display: flex;
+  justify-content: space-between;
+  gap: 40px;
+  padding-block-start: 15px;
 }
 
 .search-form__fieldset-title {
-	font-style: normal;
-	font-weight: 400;
-	font-size: 18px;
-	line-height: 22px;
-	color: #FFFFFF;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  color: #FFFFFF;
 
-	padding-block-end: 2px;
+  padding-block-end: 2px;
 }
 
 .content__list {
-	block-size: 298px;
-	overflow-y: scroll;
-	scrollbar-width: none;
-	position: relative;
+  block-size: 298px;
+  scrollbar-width: none;
+  position: relative;
+  overflow: auto;
 }
 
 .content__details {
-	display: flex;
-	flex-direction: column;
-	inline-size: 100%;
-	block-size: 100%;
+    display: flex;
+    flex-direction: column;
+    inline-size: 100%;
+    block-size: 100%;
 }
 
 
 .content__list-item:not(:last-child) {
-	padding-block-end: 30px;
+    padding-block-end: 30px;
 }
 
 .content__video-card {
-	display: flex;
-	justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .content__video-card-thumbnail {
-	object-fit: cover;
-	inline-size: 194px;
-	block-size: 103px;
-	object-position: right;
+    object-fit: cover;
+    inline-size: 194px; 
+    block-size: 103px; 
+    object-position: center; 
 }
 
 fieldset {
-	border: 0;
+  border: 0;
 }
 
 .search-form__fieldset {
-	font-family: 'Fira Sans Condensed', sans-serif;
-	font-style: normal;
-	font-weight: 400;
-	font-size: 18px;
-	line-height: 22px;
-	display: flex;
-	gap: 5px;
-	flex-direction: column;
+  font-family: 'Fira Sans Condensed', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  display: flex;
+  gap: 5px;
+  flex-direction: column;
 
-	inline-size: 100%;
+  inline-size: 100%;
 }
 
 .search-form__checkbox-list {
-	cursor: pointer;
-	display: flex;
-	gap: 15px;
+    cursor: pointer;
+    display: flex;
+    gap: 15px;
 }
 
 .search-form__textfield {
-	padding: 2px 0;
-	border-top: 1px solid #FFFFFF;
-	border-bottom: 1px solid #FFFFFF;
-	appearance: none;
-	border-right: none;
-	border-left: none;
-	background-color: transparent;
-	font-family: inherit;
-	font-weight: inherit;
-	font-size: inherit;
-	font-style: normal;
-	inline-size: 225px;
-	color: rgba(255, 255, 255, 1);
+    padding: 2px 0;
+    border-top: 1px solid #FFFFFF;
+    border-bottom: 1px solid #FFFFFF;
+    appearance: none;
+    border-right: none;
+    border-left: none;
+    background-color: transparent;
+    font-family: inherit;
+    font-weight: inherit;
+    font-size: inherit;
+    font-style: normal;
+    inline-size: 225px;
+    color: rgba(255, 255, 255, 1);
 }
 
 .search-form__textfield::placeholder {
-	font-family: inherit;
-	font-weight: inherit;
-	font-size: inherit;
-	color: rgba(255, 255, 255, 0.7);
-}
+    font-family: inherit;
+    font-weight: inherit;
+    font-size: inherit;
+    color: rgba(255, 255, 255, 0.7);
+  }
 
 .search-form__textfield:focus {
-	outline: none;
+    outline: none;
 }
 
-.search-form__textfield:focus-visible {
-	outline: 1px solid #ffffff;
-}
+.search-form__textfield:focus-visible { 
+    outline: 1px solid #ffffff; 
+} 
 
 .search-form__textfield:active {
-	border: 1px solid #FFFFFF;
+    border: 1px solid #FFFFFF;
 }
 
 .search-form__label {
-	display: flex;
-	width: fit-content;
-	align-items: center;
-	gap: 8px;
-	cursor: pointer;
-	appearance: none;
-	text-decoration: underline transparent;
+    display: flex;
+    width: fit-content;
+    align-items: center;
+    gap: 8px;
+    cursor: pointer;
+    appearance: none;
+    text-decoration: underline transparent;
 
 }
 
 .search-form__label:hover .search-form__label-text {
-	text-decoration: underline;
+    text-decoration: underline;
 }
 
 
 .search-form__pseudo-checkbox {
-	display: flex;
-	inline-size: 16px;
-	block-size: 16px;
-	outline: 1px solid #FFFFFF;
+    display: flex;
+    inline-size: 16px;
+    block-size: 16px;
+    outline: 1px solid #FFFFFF;
 }
 
 input[type="checkbox"]:checked+.search-form__pseudo-checkbox {
-	background-color: #FFFFFF;
-	outline: 1px solid #FFFFFF;
-	outline-offset: 1px;
+    background-color: #FFFFFF;
+    outline: 1px solid #FFFFFF;
+    outline-offset: 1px;
 }
 
 .button {
-	display: flex;
-	height: 34px;
-	font-size: 18px;
-	font-weight: 700;
-	line-height: normal;
-	align-items: center;
-	justify-content: center;
-	color: #fff;
-	border: 1px solid #FFFFFF;
-	background-color: transparent;
-	font-family: "Fira Sans Condensed", sans-serif;
-	cursor: pointer;
-	flex-shrink: 0;
+    display: flex;
+    height: 34px;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: normal;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    border: 1px solid #FFFFFF;
+    background-color: transparent;
+    font-family: "Fira Sans Condensed", sans-serif;
+    cursor: pointer;
+    flex-shrink: 0;
 }
 
 .button:hover {
-	text-decoration: underline;
+    text-decoration: underline;
 }
 
 .button:active {
-	background-color: rgba(84, 80, 80, 1);
+    background-color: rgba(84, 80, 80, 1);
 }
 
 .button:focus {
-	outline: none;
+    outline: none;
 }
 
 .button:focus-visible {
-	outline: 1px solid #FFFFFF;
-	outline-offset: 1px;
-}
+    outline: 1px solid #FFFFFF;
+    outline-offset: 1px;
+  }
 
 .search-form__submit-button {
-	align-self: flex-end;
-	inline-size: 194px;
+    align-self: flex-end;
+    inline-size: 194px;
 }
 
 .more-button {
-	width: 100%;
+    width: 100%;
 }
 
 .search-form__label:has(:focus-visible) {
-	outline: 1px solid #FFFFFF;
-	outline-offset: 1px;
-}
+    outline: 1px solid #FFF;
+    outline-offset: 1px;
+  }
