--- a/styles/style.css
+++ b/styles/style.css
@@ -9,15 +9,15 @@ html {
 }
 
 .page {
-    display: flex;
-    align-items: center;
-    inline-size: 1200px;
-    min-block-size: 100%;
-    margin: 0 auto;
-    color: #fff;
-    font-family: 'Fira Sans Condensed', sans-serif;
-    font-size: 18px;
-    background-color: #1b1919;
+  display: flex;
+  align-items: center;
+  inline-size: 1200px;
+  min-block-size: 100%;
+  margin: 0 auto;
+  color: #fff;
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-size: 18px;
+  background-color: #1b1919;
 }
 
 h1,
@@ -50,18 +50,17 @@ ol {
 }
 
 .content {
-    display: flex;
-    min-inline-size: 1140px;
-    gap: 30px;
-    padding-inline-start: 30px;
-    padding-inline-end: 30px;
-    padding-block-start: 133px;
-    padding-block-end: 133px;
+  display: flex;
+  min-inline-size: 1140px;
+  gap: 30px;
+  padding-inline-start: 30px;
+  padding-inline-end: 30px;
+  padding-block-start: 133px;
+  padding-block-end: 133px;
 }
 
 .result {
-    align-self: flex-end;
-    margin-block-start: 78px; 
+  align-self: flex-end;
 }
 
 .result__video-container {
@@ -70,7 +69,7 @@ ol {
   block-size: 386px;
 }
 
-.result__video{
+.result__video {
   block-size: 100%;
   inline-size: 100%;
   object-fit: cover;
@@ -78,18 +77,17 @@ ol {
 }
 
 .title {
-  font-family: 'Oswald', sans-serif;
-  font-style: normal;
+  font-family: "Oswald", sans-serif;
   font-weight: 700;
-  padding: 0 0 26px;
+  margin-block-end: 26px;
   font-size: 75px;
   line-height: 70.5px;
   text-transform: uppercase;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .content__accent {
-  font-family: 'Oswald', sans-serif;
+  font-family: "Oswald", sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 75px;
@@ -99,54 +97,58 @@ ol {
 }
 
 .content__list-item {
-    inline-size: 398px;
+  inline-size: 398px;
 }
 
 .content__card-link {
   text-decoration: none;
-  color: #FFFFFF;
+  color: #ffffff;
   display: block;
   cursor: pointer;
   margin: 2px;
 }
 
 .content__card-link:focus {
-    outline: none;
+  outline: none;
 }
 
 .content__card-link:focus-visible {
-    outline: 1px solid #FFFFFF;
+  outline: 1px solid #ffffff;
 }
 
 .content__card-link:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 .content__card-link:active {
   background-color: rgba(84, 80, 80, 1);
-
 }
 
 .content__card-link_current {
-    background-color: rgba(84, 80, 80, 1);
+  background-color: rgba(84, 80, 80, 1);
 }
 
 .content__video-card-title {
-    font-family: 'Oswald', sans-serif;
-    font-style: normal;
-    font-weight: 700;
-    flex-grow: 1;
-    flex-basis: 0;
-    hyphens: auto;
-    font-size: 30px;
-    line-height: 100%;
-    text-transform: uppercase;
-    color: #FFFFFF;
+  margin-block-end: 6px;
+  font-family: "Oswald", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 100%;
+  text-transform: uppercase;
+  color: #ffffff;
 }
 
 .content__video-card-description {
-  font-weight: 400;
   line-height: 16.2px;
-  color: #FFFFFF;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  color: #ffffff;
+}
+
+.content__video-card-description-container {
+  flex-grow: 1;
+  flex-basis: 0;
 }
 
 .search-form {
@@ -161,9 +163,8 @@ ol {
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
-  color: #FFFFFF;
-
-  padding-block-end: 2px;
+  color: #ffffff;
+  padding-block-end: 1px;
 }
 
 .content__list {
@@ -174,15 +175,14 @@ ol {
 }
 
 .content__details {
-    display: flex;
-    flex-direction: column;
-    inline-size: 100%;
-    block-size: 100%;
+  display: flex;
+  flex-direction: column;
+  inline-size: 100%;
+  block-size: 100%;
 }
 
-
 .content__list-item:not(:last-child) {
-    padding-block-end: 30px;
+  padding-block-end: 30px;
 }
 
 .content__video-card {
@@ -191,18 +191,14 @@ ol {
 }
 
 .content__video-card-thumbnail {
-    object-fit: cover;
-    inline-size: 194px; 
-    block-size: 103px; 
-    object-position: center; 
-}
-
-fieldset {
-  border: 0;
+  object-fit: cover;
+  inline-size: 194px;
+  block-size: 103px;
+  object-position: center;
 }
 
 .search-form__fieldset {
-  font-family: 'Fira Sans Condensed', sans-serif;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -210,123 +206,123 @@ fieldset {
   display: flex;
   gap: 5px;
   flex-direction: column;
-
   inline-size: 100%;
 }
 
+fieldset {
+  border: 0;
+}
+
 .search-form__checkbox-list {
-    cursor: pointer;
-    display: flex;
-    gap: 15px;
+  cursor: pointer;
+  display: flex;
+  gap: 16px;
 }
 
 .search-form__textfield {
-    padding: 2px 0;
-    border-top: 1px solid #FFFFFF;
-    border-bottom: 1px solid #FFFFFF;
-    appearance: none;
-    border-right: none;
-    border-left: none;
-    background-color: transparent;
-    font-family: inherit;
-    font-weight: inherit;
-    font-size: inherit;
-    font-style: normal;
-    inline-size: 225px;
-    color: rgba(255, 255, 255, 1);
+  border-top: 1px solid #ffffff;
+  color: currentColor;
+  font-family: inherit;
+  font-weight: inherit;
+  font-size: inherit;
+  border-right: none;
+  border-bottom: 1px solid #ffffff;
+  border-left: none;
+  padding: 2.5px 0;
+  color: currentColor;
+  font-family: inherit;
+  font-weight: inherit;
+  font-size: inherit;
+  background-color: transparent;
+  inline-size: 225px;
 }
 
 .search-form__textfield::placeholder {
-    font-family: inherit;
-    font-weight: inherit;
-    font-size: inherit;
-    color: rgba(255, 255, 255, 0.7);
-  }
-
-.search-form__textfield:focus {
-    outline: none;
+  font-family: inherit;
+  font-weight: inherit;
+  font-size: inherit;
+  color: rgba(255, 255, 255, 0.7);
 }
 
-.search-form__textfield:focus-visible { 
-    outline: 1px solid #ffffff; 
-} 
+.search-form__textfield:focus {
+  outline: none;
+}
 
 .search-form__textfield:active {
-    border: 1px solid #FFFFFF;
+  border: 1px solid #ffffff;
 }
 
 .search-form__label {
-    display: flex;
-    width: fit-content;
-    align-items: center;
-    gap: 8px;
-    cursor: pointer;
-    appearance: none;
-    text-decoration: underline transparent;
-
+  display: flex;
+  width: fit-content;
+  align-items: center;
+  gap: 8px;
+  cursor: pointer;
+  appearance: none;
+  text-decoration: underline transparent;
 }
 
 .search-form__label:hover .search-form__label-text {
-    text-decoration: underline;
-}
-
-
-.search-form__pseudo-checkbox {
-    display: flex;
-    inline-size: 16px;
-    block-size: 16px;
-    outline: 1px solid #FFFFFF;
-}
-
-input[type="checkbox"]:checked+.search-form__pseudo-checkbox {
-    background-color: #FFFFFF;
-    outline: 1px solid #FFFFFF;
-    outline-offset: 1px;
-}
-
-.button {
-    display: flex;
-    height: 34px;
-    font-size: 18px;
-    font-weight: 700;
-    line-height: normal;
-    align-items: center;
-    justify-content: center;
-    color: #fff;
-    border: 1px solid #FFFFFF;
-    background-color: transparent;
-    font-family: "Fira Sans Condensed", sans-serif;
-    cursor: pointer;
-    flex-shrink: 0;
-}
-
-.button:hover {
-    text-decoration: underline;
-}
-
-.button:active {
-    background-color: rgba(84, 80, 80, 1);
-}
-
-.button:focus {
-    outline: none;
-}
-
-.button:focus-visible {
-    outline: 1px solid #FFFFFF;
-    outline-offset: 1px;
-  }
-
-.search-form__submit-button {
-    align-self: flex-end;
-    inline-size: 194px;
-}
-
-.more-button {
-    width: 100%;
+  text-underline-offset: 5px;
+  text-decoration: underline 1px #fff;
 }
 
 .search-form__label:has(:focus-visible) {
-    outline: 1px solid #FFF;
-    outline-offset: 1px;
-  }
+  outline: 1px solid #fff;
+  outline-offset: 1px;
+}
+
+.search-form__pseudo-checkbox {
+  display: flex;
+  inline-size: 16px;
+  block-size: 16px;
+  outline: 1px solid #ffffff;
+}
+
+input[type="checkbox"]:checked + .search-form__pseudo-checkbox {
+  background-color: #ffffff;
+  outline: 1px solid #ffffff;
+  outline-offset: 1px;
+}
+
+.button {
+  display: flex;
+  height: 34px;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: normal;
+  align-items: center;
+  justify-content: center;
+  color: #ffffff;
+  border: 1px solid #ffffff;
+  background-color: transparent;
+  font-family: "Fira Sans Condensed", sans-serif;
+  cursor: pointer;
+  flex-shrink: 0;
+}
+
+.button:hover {
+  text-decoration: underline;
+}
+
+.button:active {
+  background-color: rgba(84, 80, 80, 1);
+}
+
+.button:focus {
+  outline: none;
+}
+
+.button:focus-visible {
+  outline: 1px solid #ffffff;
+  outline-offset: 1px;
+}
+
+.search-form__submit-button {
+  align-self: flex-end;
+  inline-size: 194px;
+}
+
+.more-button {
+  width: 100%;
+}
